--- a/k8s/insurance-backend/statefulset-insurance-postgres.yaml
+++ b/k8s/insurance-backend/statefulset-insurance-postgres.yaml
@@ -1,30 +1,30 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: postgres
+  name: postgres-insurance
 spec:
-  serviceName: postgres
+  serviceName: postgres-insurance
   replicas: 1
   selector:
     matchLabels:
-      app: postgres
+      app: postgres-insurance
   template:
     metadata:
       labels:
-        app: postgres
+        app: postgres-insurance
     spec:
       containers:
-      - name: postgres
-        image: postgres:13
+      - name: postgres-insurance
+        image: postgres:15.6
         ports:
         - containerPort: 5432
         env:
         - name: POSTGRES_DB
-          value: mydatabase
+          value: insurancedb
         - name: POSTGRES_USER
-          value: myuser
+          value: admin
         - name: POSTGRES_PASSWORD
-          value: mypassword
+          value: '12345'
         volumeMounts:
         - name: postgres-storage
           mountPath: /var/lib/postgresql/data
