--- a/k8s/user-backend/service-user-mysql.yaml
+++ b/k8s/user-backend/service-user-mysql.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres
+  name: mysql-user-service
 spec:
   ports:
-  - port: 5432
-    targetPort: 5432
+  - port: 3306
+    targetPort: 3306
   selector:
-    app: postgres
+    app: mysql-user
   type: ClusterIP
